--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1"
   }
 }
